--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; }
+  font-family: 'Kilowatt', Tahoma, Verdana, sans-serif; }
 
 .fadeIn {
   opacity: 0;
