--- a/css/style.scss
+++ b/css/style.scss
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-family: 'Kano','Noto Sans', sans-serif;
 }
 @mixin Head2 {  //h2用のcss
     font-size: 42px;
     text-align: center;
     margin: 30px;
     transition: all 3s;
+    text-shadow: rgb(150, 150, 150) 2px 2px 2px;
 }
 @mixin  modal { //modal用のcss
     width:40%;
@@ -159,13 +160,16 @@ $main-color:rgb(151, 150, 150); //メインの色
             .works-list{
                 ul{
                     li{
-                        max-width: 150px;
+                        list-style: none;
+                        margin-bottom: 30px;
+                        border: solid 1px #fff;
+                        background: #fff;
+                        padding: 20px 15px;
+                        width: 80%;
+                        display:block;
                         margin: 0 auto;
                         img{
-                            max-width: 150px;
-                        }
-                        p{
-                            margin: 20px;
+                            width: 40%;
                         }
                     }
                 }
@@ -211,15 +215,6 @@ $main-color:rgb(151, 150, 150); //メインの色
                     zoom: 1;
                 }
             }
-            ul{
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                li{
-                    list-style:none;
-                    margin-left: 50px;
-                }
-            }
           .works-h2{
               @include Head2();
           }
@@ -247,7 +242,7 @@ $main-color:rgb(151, 150, 150); //メインの色
                 }
                 .css::after{
                     content: '';
-                    width:60%;
+                    width:70%;
                     height: 50px;
                     background: red;
                     display: block;
@@ -258,6 +253,8 @@ $main-color:rgb(151, 150, 150); //メインの色
                     height: 50px;
                     background: red;
                     display: block;
+                    position: absolute;
+                    bottom: 0;
                 }
                 .jq::after{
                     content: '';
@@ -275,7 +272,7 @@ $main-color:rgb(151, 150, 150); //メインの色
                 }
                 .wp::after{
                     content: '';
-                    width:50%;
+                    width:80%;
                     height: 50px;
                     background: red;
                     display: block;
@@ -285,9 +282,9 @@ $main-color:rgb(151, 150, 150); //メインの色
                     list-style: none;
                     margin:30px;
                     font-size: 30px;
-                    border: black 1px solid;
                     box-shadow: 5px 5px 10px;
                     background: #fff;
+                    position: relative;
                     .skill-title{
                      margin: 10px;
                      font-size: 35px;
@@ -315,7 +312,6 @@ $main-color:rgb(151, 150, 150); //メインの色
                 li{
                     width: 80%;
                     background: #fff;
-                    border: 1px solid black;
                     text-align: center;
                     list-style: none;
                     margin: 0 auto;
@@ -324,6 +320,30 @@ $main-color:rgb(151, 150, 150); //メインの色
                     padding: 20px;
                     box-shadow: 4px 4px 4px #000000;
                     font-size: 24px;
+                    .lp-img{
+                        width:20%;
+                        display: block;
+                        margin: 0 auto;
+                        margin-bottom: 30px;
+                    }
+                    .pc_wp-img{
+                        width:40%;
+                        display: block;
+                        margin: 0 auto;
+                        margin-bottom: 30px;
+                    }
+                    .pc-img{
+                        width:40%;
+                        display: block;
+                        margin: 0 auto;
+                        margin-bottom: 30px;
+                    }
+                    .pc-code-img{
+                        width:40%;
+                        display: block;
+                        margin: 0 auto;
+                        margin-bottom: 30px;
+                    }
                     .cando-title{
                         font-size: 28px;
                         font-weight: bold;
@@ -340,17 +360,24 @@ $main-color:rgb(151, 150, 150); //メインの色
     
         #contact-wrapper{
             .contact-card{
-                border: 1px solid black;
                 padding: 20px;
                 width: max-content;
                 margin: 0 auto;
                 height: 200px;
                 box-shadow: black 5px 5px 5px;
-                padding-top: 80px;
+                padding-top: 2%;
                 background: #fff;
-                p{
-                    text-align: center;
-                }
+               a{
+                   padding: 10px 10px ;
+                   background: orange;
+                   text-decoration: none;
+                   color: #333;
+                   display: block;
+                   margin-top: 20px;
+               }
+               a:hover{
+                   opacity: .8;
+               }
             }
             padding-bottom: 50px;
             .contact-h2{
