--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Kano','Noto Sans', sans-serif; }
+  font-family: 'vdl-v7gothic', sans-serif; }
 
 .fadeIn {
   opacity: 0;
