--- a/css/style.scss
+++ b/css/style.scss
@@ -151,6 +151,7 @@ $main-color:rgb(151, 150, 150); //メインの色
             }
            }
            .profile-content{
+               width: 90%;
                h3{
                    font-size: 32px;
                     padding:10px;
@@ -451,7 +452,7 @@ opacity: 0.5;
             border: none;
             padding: 0;
             width: 42px;
-            color: #333;
+            color: #fff;
             letter-spacing: 0.1em;
             cursor: pointer;
             position: fixed;
@@ -465,7 +466,7 @@ opacity: 0.5;
           button span.bar {
             display: block;
             height: 2px;
-            background-color: #333;
+            background-color: #fff;
             margin: 10px 0;
             transition: all 0.2s;
             transform-origin: 0 0;
@@ -629,6 +630,9 @@ opacity: 0.5;
                 font-family: 'Permanent Marker', cursive!important;
                 font-size: 50px;
             }
+        }
+        #works-wrapper{
+            margin-top: 220px;
         }
     }
     
