--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,9 @@ footer {
     font-family: "Permanent Marker", cursive !important;
     font-size: 50px; }
   main #works-wrapper {
-    margin-top: 300px; } }
+    margin-top: 340px; } }
+@media screen and (max-width: 350px) {
+  main #works-wrapper {
+    margin-top: 400px; } }
 
 /*# sourceMappingURL=style.css.map */
